--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zeddy713.github.io/portfolio",
+  "homepage": "https://zeddy713.github.io/developerFolio",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
